# world-ai

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
config/: settings.py
config/postgres/: init.sql
core/cascade/: __init__.py  agent.py  dispatcher.py  evaluator.py  openrouter.py  types.py
core/router/: confidence.py  models.py  router.py
interfaces/: Dockerfile
interfaces/adapters/: base_adapter.py  discord_adapter.py  email_adapter.py  slack_adapter.py  telegram_adapter.py  voice_adapter.py  webchat_adapter.py  whatsapp_adapter.py
interfaces/gateway/: gateway.py  message.py  response_formatter.py
nervous/: __init__.py  gateway.py
nervous/servers/: base.py  filesystem_mcp.py  web_mcp.py
tests/unit/: test_cascade_agent.py  test_cascade_evaluator.py  test_mcp_filesystem.py  test_mcp_gateway.py  test_mcp_web.py  test_router.py
tests/unit/interfaces/: test_base_adapter.py  test_discord_adapter.py  test_email_adapter.py  test_gateway.py  test_message.py  test_response_formatter.py  test_slack_adapter.py  test_telegram_adapter.py  test_voice_adapter.py  test_webchat_adapter.py  test_whatsapp_adapter.py
